2013-10-10	Malignant Manor <malignantmanor@users.sourceforge.net>
	* combat.cc: Fix r6914 regression that caused party members to attack each
	  other after friendly fire occurred
	* usecode/ucinternal.cc: UI_remove_item now removes the contents if it
	  deletes a container. This stops the scroll from being in your inventory
	  when you deliver the package to Elynor.
	* schedule.cc: Fix crash caused by find_desk_items in desk schedule

2013-10-03	Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Don't build the patrol code that starts at the nearest egg
	  since it will break some npcs like the automaton (npc 160) in Freedom.
	* Makefile.mingw: Don't build OpenGL scaler if using SDL2 (not yet updated)

2013-09-29    <jeff@mini.nerble.net>
	* Don't have an NPC on the Desk_schedule pick up parrots.

2013-09-02	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: Fixed SetIcon transparency for SDL2

2013-09-01	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc, gamemgr/bggame.cc, gamemgr/sigame.cc, gumps/Gump_manager.cc, imagewin/imagewin.cc: Some fixes to allow SDL2 iphone compilation -- get a bunch of undefined references with the SDL2 library for some reason.

2013-09-01	Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: Fix ES drag and drop with SDL2 (only tested Win32)
	* Makefile.mingw: Added SDL2 define so SDL2 can compile
	* sdl-compat.h: Added SDL_putenv (at least temporarily). I don't even know
	  if the variables we use still work.
	* gamemgr/bggame.cc, gamemgr/sigame.cc, gumps\Gump_manager.cc:
	  Fix converting to non-pointer type 'int' from NULL warning

2013-08-31	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: SDL2 SetIcon looks correct now.  However the workaround is NOT optimal.  Seems like there's no way to get a paletted surface working right in SDL2... but I'm probably just missing it.

2013-08-31	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)